--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,7 @@
 }
 
 .Home-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: spin infinite 10s linear;
   height: 80px;
 }
 
@@ -18,7 +18,7 @@
   font-size: large;
 }
 
-@keyframes Home-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
